# miradb

./: README.md  pyproject.toml
benchmark/: compare.py  generate_plots.py
benchmark/resources/: eqs_list.tsv
benchmark/results/: report_score.csv
docker/: Dockerfile  Dockerfile.postgres  README.md  build_db_docker.sh  docker-compose.yml  test_build_db_docker.sh
miradb/compare/: equation.py
miradb/db/: __init__.py  client.py  config.py  default_db_config.ini  extraction_methods.json  extraction_methods.py  manager.py  queries.py  schema.py
miradb/sources/: app.py  explorer_ui.py
miradb/sources/templates/: explorer.html
scripts/: add_db_data.ipynb  generate_template_models.py  populate_db.py
sources/: app.py
