[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "miradb"
version = "0.1.0"
description = "MIRA-DB: an automatically extracted database of MIRA models"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "sqlalchemy>=2",
    "click",
    "gunicorn",
    "mira[sbml,ode] @ git+https://github.com/gyorilab/mira.git",
]

[project.optional-dependencies]
comparison = [
    "rapidfuzz",
    "zss",
]

[project.urls]
Repository = "https://github.com/gyorilab/miradb"

[tool.setuptools.packages.find]
include = ["miradb*"]
